--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "hardhat": "^2.6.2"
   },
   "dependencies": {
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "prettier": "^2.6.1"
   }
 }
