--- a/package.json
+++ b/package.json
@@ -1,16 +1,31 @@
 {
   "name": "hardhat-project",
+  "scripts": {
+    "prettier": "prettier --write 'contracts/**/*.sol'",
+    "lint": "prettier --list-different 'contracts/**/*.sol'",
+    "test": "npx hardhat test",
+    "compile": "npmx hardhat compile",
+    "deploy-test": "hardhat deploy --network rinkeby",
+    "verify": "hardhat --network rinkeby etherscan-verify --sleep"
+
+  },
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@openzeppelin/contracts": "^4.3.1",
-    "chai": "^4.3.4",
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@nomiclabs/hardhat-etherscan": "^3.0.1",
+    "@nomiclabs/hardhat-waffle": "^2.0.2",
+    "chai": "^4.3.6",
+    "dotenv": "^16.0.0",
     "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.4.6",
-    "hardhat": "^2.6.2"
+    "@openzeppelin/contracts": "^4.3.1",
+    "ethers": "^5.5.4",
+    "hardhat": "^2.8.4",
+    "hardhat-deploy": "^0.10.5",
+    "hardhat-deploy-ethers": "^0.3.0-beta.13",
+    "hardhat-gas-reporter": "^1.0.7",
+    "solidity-coverage": "^0.7.19"
   },
   "dependencies": {
-    "dotenv": "^10.0.0",
-    "prettier": "^2.6.1"
+    "prettier": "^2.5.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.19"
   }
 }
