--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "lint": "prettier --list-different 'contracts/**/*.sol'",
     "test": "npx hardhat test",
     "compile": "npmx hardhat compile",
+    "deploy": "hardhat deploy --network bsc",
     "deploy-test": "hardhat deploy --network rinkeby",
     "deploy-bsc-test": "hardhat deploy --network testBSC",
     "verify": "hardhat --network rinkeby etherscan-verify --sleep",
     "verify-bsc": "hardhat --network testBSC etherscan-verify --sleep"
-
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.5",
